# deepseek-test

./: .gitignore  Cargo.toml  Dockerfile  README.md  candlestick_patterns.csv  requirement.md
src/: analyzer.rs  config.rs  main.rs  models.rs  vision.rs
static/: index.html
