[package]
name = "deepseek-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
base64 = "0.22"
csv = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
